package dataControllerUtils.protobuf;


message ADEAlgorithmLanguage {
    required string language = 1;
    required string text = 2;
}
