package dataControllerUtils.protobuf;

message ADESgy {
    required string validityCondition = 1;
    repeated string inputParameters = 2;
}

